<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_weather_list"
    android:layout_width="fill_parent"
    android:layout_height="70dp"
    android:orientation="horizontal"
    android:paddingTop="10dp"
    android:paddingBottom="10dp"
    android:gravity="center"
    >

    <ImageView
        android:contentDescription="@string/description"
        android:id="@+id/iv_weather_list_picture"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:gravity="center_vertical"
        android:src="@drawable/ic_launcher"
        />
    
    <TextView
        android:id="@+id/tv_weather_list_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:gravity="center_vertical"
        android:text="@string/ark_id"
        />
    
    <TextView
        android:id="@+id/tv_weather_list_title"
        android:layout_width="50dp"
        android:layout_height="60dp"
        android:layout_marginLeft="10dp"
        android:gravity="center_vertical"
        android:text="@string/title"
        />
    
    <TextView
        android:id="@+id/tv_weather_list_msg"
        android:layout_width="50dp"
        android:layout_height="60dp"
        android:layout_marginLeft="10dp"
        android:gravity="center_vertical"
        android:text="@string/detail"
        android:maxLines="2"
        />

    <TextView
        android:id="@+id/tv_weather_postTime"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginLeft="10dp"
        android:gravity="center_vertical"
        android:text="@string/time"
        />

</LinearLayout>