<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_bussiness_info"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="#0066FF"
    >

    <LinearLayout 
        android:id="@+id/ll_bussiness_info_Title"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:background="@drawable/title_bar"
        android:gravity="center_horizontal|center_vertical"
        >
        <TextView
            android:id="@+id/tv_bussiness_info_Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bus_info_title"
            android:textSize="20sp"
            android:textColor="@color/text_white"
            />
    </LinearLayout>
    
    <ScrollView 
    	android:layout_width="fill_parent"
    	android:layout_height="fill_parent"
    	android:scrollbarStyle="outsideOverlay" 
    	android:paddingBottom="@dimen/activity_vertical_margin"
    	android:paddingLeft="@dimen/activity_horizontal_margin"
    	android:paddingRight="@dimen/activity_horizontal_margin"
    	android:paddingTop="@dimen/activity_vertical_margin"
    	android:gravity="center"
    	>
        
    	<LinearLayout
    		android:layout_width="fill_parent"
    		android:layout_height="wrap_content"
    		android:orientation="vertical"
    		android:gravity="center"
    		>
    <ImageView
        android:contentDescription="@string/description"
        android:id="@+id/iv_bussinessrInfo_view"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:src="@drawable/ic_launcher" 
        />
    
    <TextView
        android:id="@+id/tv_bussinessInfo_Title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/title"
        android:gravity="start"
        android:textSize="18sp"
        android:background="@color/text_white"
        android:padding="3dp"
        />
    
    <TextView
        android:id="@+id/tv_bussinessInfo_PostTime"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/time"
        android:gravity="start"
        android:textSize="18sp"
        android:background="@color/text_white"
        android:padding="3dp"
        />
    
    <TextView
        android:id="@+id/tv_bussinessInfo_Poster"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/poster"
        android:gravity="start"
        android:textSize="18sp"
        android:background="@color/text_white"
        android:padding="3dp"
        />

    <TextView
        android:id="@+id/tv_bussinessInfo_Detail"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/detail"
        android:gravity="start"
        android:textSize="18sp"
        android:background="@color/text_white"
        android:padding="3dp"
        />
    </LinearLayout>
    </ScrollView>

</LinearLayout>
