<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_image_list"
    android:layout_width="fill_parent"
    android:layout_height="70dp"
    android:orientation="horizontal"
    android:paddingTop="15dp"
    android:paddingBottom="15dp"
    android:gravity="center"
    >

    
         <TextView
             android:id="@+id/tv_image_list_Title"
             android:layout_width="120dp"
             android:layout_height="fill_parent"
             android:layout_marginLeft="0dp"
             android:text="@string/time"
             android:textSize="18sp"
             android:gravity="center_vertical"
             />
         
         <ImageView
             android:contentDescription="@string/description"
             android:id="@+id/iv_image_list_picture"
             android:layout_width="70dp"
             android:layout_height="70dp"
             android:layout_marginLeft="10dp"
             android:src="@drawable/ic_launcher"
             />
         
         <TextView
             android:id="@+id/tv_image_list_Detail"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
             android:layout_marginLeft="10dp"
             android:layout_marginTop="0dp"
             android:text="@string/detail"
             android:singleLine="true"
             android:gravity="center_vertical"
             android:textSize="18sp"
             />

</LinearLayout>